# memex

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: test.yml
cli/: README.md  memex.js  package.json
examples/: ai-agent-demo.js  learning-journal.js  sdk-playground.js
node-api/: .gitignore  README.md  dbBridge.js  index.js  mindcache_data-shm  mindcache_data-wal  package.json
node-api/controllers/: memoryController.js  statsController.js
node-api/middleware/: errorHandler.js
node-api/routes/: memoryRoutes.js  sessionRoutes.js  statsRoutes.js
node-api/tests/: setup.js
performance-test/: README.md  package.json  run_test.js  search_performance_test.js
rust-core/: .gitignore  Cargo.toml  build.rs
rust-core/benches/: benchmarks.rs
rust-core/examples/: async_vector_demo.rs  basic_usage.rs  performance_comparison.rs  trading_journal.rs
rust-core/scripts/: run_tests.sh
rust-core/src/: lib.rs
rust-core/src/cli/: commands.rs  mod.rs
rust-core/src/core/: async_memory.rs  async_session.rs  decay.rs  main.rs  memory.rs  mod.rs  session.rs  tests.rs
rust-core/src/database/: async_db.rs  mod.rs  models.rs  pool.rs  schema.rs  simple_db.rs  tests.rs  vector.rs
rust-core/src/ffi/: mod.rs
rust-core/tests/: ffi_tests.rs  integration_async_vector.rs  integration_tests.rs  property_tests.rs
sdk/: index.js  test-sdk.js
