[package]
name = "mindcache-core"
version = "0.1.0"
edition = "2021"
authors = ["MindCache Team"]
description = "A lightweight, local-first memory engine for AI applications with vector search and async support"
license = "MIT"
repository = "https://github.com/hamzzaaamalik/mindcache"
homepage = "https://mindcache.dev"
documentation = "https://docs.rs/mindcache-core"
keywords = ["memory", "ai", "llm", "storage", "cache", "vector", "search"]
categories = ["database", "memory-management", "api-bindings", "asynchronous"]
readme = "README.md"

[lib]
name = "mindcache_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0"

[dependencies]
# Database with connection pooling
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

# Random number generation
fastrand = "2.0"

# IO utilities
futures-io = { version = "0.3", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for memory IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Async runtime and utilities
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"], optional = true }
futures = { version = "0.3", optional = true }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Logging 
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

# Performance monitoring (optional)
criterion = { version = "0.5", optional = true }

# Text processing utilities
regex = "1.0"
unicode-segmentation = "1.10"

# Compression support (optional)
flate2 = { version = "1.0", optional = true }

# Async utilities
once_cell = "1.19"

[features]
default = ["compression", "logging"]

# Enable compression for memory storage
compression = ["flate2"]

# Enable detailed logging
logging = ["log", "env_logger"]

# Enable performance benchmarks
benchmarks = ["criterion"]

# Enable async support
async = ["tokio", "futures", "futures-io"]

# Enable vector search
vector-search = []

# Enable all features
full = ["compression", "logging", "async", "vector-search", "benchmarks"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { version = "1.0", default-features = false, features = ["std"] }
pretty_assertions = "1.4"
tokio-test = "0.4"
serial_test = "3.0"

[[example]]
name = "async_vector_demo"
required-features = ["async", "vector-search"]

[[example]]
name = "performance_comparison"
required-features = ["benchmarks"]